# stm32f429-smoltcp-mqtt-rtic

./: Cargo.toml  README.md  build.rs
.cargo/: config
src/: config.rs  main.rs  settings.rs  telemetry.rs
src/hardware/: eth.rs  gpio.rs  mod.rs  net.rs  network_clock.rs  phy.rs
src/net/: mod.rs  network_processor.rs  telemetry.rs
